Updated linked paths for long code system pages

--- a/.mkdocs/site/v4/code-systems/index.html
+++ b/.mkdocs/site/v4/code-systems/index.html
@@ -3609,7 +3609,7 @@
 </ul>
 <div class="admonition info">
 <p class="admonition-title">Too many codes to display</p>
-<p>For the full list go to <a href="/v4/code-systems/ods-codes">ods-codes-4</a></p>
+<p>For the full list go to <a href="../code-systems/ods-codes">ods-codes-4</a></p>
 </div>
 <h2 id="incident-location"><span class="enumerate-headings-plugin enumerate-heading-plugin">2.64</span> Incident Location</h2>
 <ul>
@@ -3677,7 +3677,7 @@
 </ul>
 <div class="admonition info">
 <p class="admonition-title">Too many codes to display</p>
-<p>For the full list go to <a href="/v4/code-systems/specialty">specialty-4</a></p>
+<p>For the full list go to <a href="../code-systems/specialty">specialty-4</a></p>
 </div>
 <h2 id="risk-location"><span class="enumerate-headings-plugin enumerate-heading-plugin">2.66</span> Risk location</h2>
 <ul>
@@ -3901,7 +3901,7 @@
 </ul>
 <div class="admonition info">
 <p class="admonition-title">Too many codes to display</p>
-<p>For the full list go to <a href="/v4/code-systems/device-type">device-type-4</a></p>
+<p>For the full list go to <a href="../code-systems/device-type">device-type-4</a></p>
 </div>
 </article>
 </div>
