--- a/.mkdocs/site/v5/code-systems/ods-codes/index.html
+++ b/.mkdocs/site/v5/code-systems/ods-codes/index.html
@@ -239,7 +239,7 @@
 <div class="md-content" data-md-component="content">
 <article class="md-content__inner md-typeset">
 <h1 id="ods-codes"><span class="enumerate-headings-plugin enumerate-heading-plugin">10.</span> ODS Codes</h1>
-<p>This code system has a lot of items, so has been extracted to its own page. The grouped record is <a href="/v5/code-systems#ods-codes">here</a>.</p>
+<p>This code system has a lot of items, so has been extracted to its own page. The grouped record is <a href="../../code-systems#ods-codes">here</a>.</p>
 <table>
 <thead>
 <tr>
