--- a/.mkdocs/site/index.html
+++ b/.mkdocs/site/index.html
@@ -240,7 +240,10 @@
 <article class="md-content__inner md-typeset">
 <h1 id="introduction"><span class="enumerate-headings-plugin enumerate-heading-plugin">1.</span> Introduction</h1>
 <p>This site is used to define the taxonomy of the NHS LFPSE FHIR API. The following versions are available:</p>
-<!--- replace block: version list -->
+<ul>
+<li><a href="" title="v4/taxonomy.md">Version 4</a></li>
+<li><a href="" title="v5/taxonomy.md">Version 5</a></li>
+</ul>
 </article>
 </div>
 </div>
