--- a/.mkdocs/site/v4/code-systems/device-type/index.html
+++ b/.mkdocs/site/v4/code-systems/device-type/index.html
@@ -239,7 +239,7 @@
 <div class="md-content" data-md-component="content">
 <article class="md-content__inner md-typeset">
 <h1 id="device-type"><span class="enumerate-headings-plugin enumerate-heading-plugin">4.</span> Device Type</h1>
-<p>This code system has a lot of items, so has been extracted to its own page. The grouped record is <a href="/v4/code-systems#device-type">here</a>.</p>
+<p>This code system has a lot of items, so has been extracted to its own page. The grouped record is <a href="../../code-systems#device-type">here</a>.</p>
 <table>
 <thead>
 <tr>
