--- a/.mkdocs/site/v5/code-systems/index.html
+++ b/.mkdocs/site/v5/code-systems/index.html
@@ -3898,7 +3898,7 @@
 </ul>
 <div class="admonition info">
 <p class="admonition-title">Too many codes to display</p>
-<p>For the full list go to <a href="/v5/code-systems/ods-codes">ods-codes-5</a></p>
+<p>For the full list go to <a href="../code-systems/ods-codes">ods-codes-5</a></p>
 </div>
 <h2 id="incident-location"><span class="enumerate-headings-plugin enumerate-heading-plugin">7.69</span> Incident Location</h2>
 <ul>
@@ -3978,7 +3978,7 @@
 </ul>
 <div class="admonition info">
 <p class="admonition-title">Too many codes to display</p>
-<p>For the full list go to <a href="/v5/code-systems/specialty">specialty-5</a></p>
+<p>For the full list go to <a href="../code-systems/specialty">specialty-5</a></p>
 </div>
 <h2 id="risk-location"><span class="enumerate-headings-plugin enumerate-heading-plugin">7.71</span> Risk location</h2>
 <ul>
@@ -4202,7 +4202,7 @@
 </ul>
 <div class="admonition info">
 <p class="admonition-title">Too many codes to display</p>
-<p>For the full list go to <a href="/v5/code-systems/device-type">device-type-5</a></p>
+<p>For the full list go to <a href="../code-systems/device-type">device-type-5</a></p>
 </div>
 </article>
 </div>
