Updated paths on home page

--- a/.mkdocs/site/print_page/index.html
+++ b/.mkdocs/site/print_page/index.html
@@ -664,8 +664,8 @@
         <section class="print-page" id="index"><h1 id="index-introduction">Introduction</h1>
 <p>This site is used to define the taxonomy of the NHS LFPSE FHIR API. The following versions are available:</p>
 <ul>
-<li><a href="#." title="v4/taxonomy.md">Version 4</a></li>
-<li><a href="#." title="v5/taxonomy.md">Version 5</a></li>
+<li><a href="#v4-taxonomy">Version 4</a></li>
+<li><a href="#v5-taxonomy">Version 5</a></li>
 </ul></section>
                         <h1 class='nav-section-title' id='section-v4'>
                             V4 <a class='headerlink' href='#section-v4' title='Permanent link'>↵</a>
