--- a/.mkdocs/site/index.html
+++ b/.mkdocs/site/index.html
@@ -241,8 +241,8 @@
 <h1 id="introduction"><span class="enumerate-headings-plugin enumerate-heading-plugin">1.</span> Introduction</h1>
 <p>This site is used to define the taxonomy of the NHS LFPSE FHIR API. The following versions are available:</p>
 <ul>
-<li><a href="" title="v4/taxonomy.md">Version 4</a></li>
-<li><a href="" title="v5/taxonomy.md">Version 5</a></li>
+<li><a href="v4/taxonomy/">Version 4</a></li>
+<li><a href="v5/taxonomy/">Version 5</a></li>
 </ul>
 </article>
 </div>
